--- a/scss/style.scss
+++ b/scss/style.scss
@@ -134,6 +134,13 @@ button:hover {
         }
         .skill_1 {
             padding-right: 24px;
+            width: 400px;
+            text-align-last: left;
+        }
+        .skill_2 {
+            padding-right: 24px;
+            width: 400px;
+            text-align-last: left;
         }
     }
 }
