--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,5 +1,5 @@
 body {
-    font-family:Arial,Helvetica,sans-serif;
+    font-family: Arial, Helvetica, sans-serif;
     width: 100%;
     height: auto;
     // font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans",
@@ -125,10 +125,13 @@ button:hover {
     .skill {
         width: 1000px;
         margin-left: 120px;
-        margin-top: 240px;
+        margin-top: 80px;
         display: flex;
         justify-content: space-between;
         height: 500px;
+        h4{
+            font-size: 56px;
+        }
         button {
             margin-top: 48px;
         }
@@ -136,11 +139,17 @@ button:hover {
             padding-right: 24px;
             width: 400px;
             text-align-last: left;
+            p {
+                height: 160px;
+            }
         }
         .skill_2 {
             padding-right: 24px;
             width: 400px;
             text-align-last: left;
+            p{
+                height: 160px;
+            }
         }
     }
 }
@@ -185,12 +194,10 @@ button:hover {
             justify-content: center;
             width: 100px;
         }
-        
 
         li:hover {
             img {
                 opacity: 0.15;
-                
             }
         }
 
@@ -207,7 +214,6 @@ button:hover {
             text-align: center;
             margin: 0 auto;
             font-size: 40px;
-
 
             // padding: 16px 32px;
         }
