--- a/scss/style.scss
+++ b/scss/style.scss
@@ -4,6 +4,8 @@ body {
     height: auto;
     // font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans",
     //     "Helvetica Neue", sans-serif;
+    scroll-behavior:smooth;
+
 }
 i {
     font-size: 32px;
